@@ -18,6 +18,7 @@
 
 package org.apache.tajo.engine.optimizer.eval;
 
+import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -65,6 +66,7 @@ public class EvalTreeOptimizer {
   }
 
   public EvalNode optimize(LogicalPlanner.PlanContext context, EvalNode node) {
+    Preconditions.checkNotNull(node);
 
     EvalNode optimized = node;
     for (EvalTreeOptimizationRule rule : rules) {
