@@ -162,7 +162,9 @@ public class LogicalPlanPreprocessor extends BaseAlgebraVisitor<LogicalPlanner.P
       throws PlanningException {
     // If Non-from statement, it immediately returns.
     if (!expr.hasChild()) {
-      return ctx.plan.createNode(EvalExprNode.class);
+      EvalExprNode exprNode = ctx.plan.createNode(EvalExprNode.class);
+      exprNode.setTargets(buildTargets(ctx, expr.getNamedExprs()));
+      return exprNode;
     }
 
     stack.push(expr); // <--- push
@@ -200,20 +202,8 @@ public class LogicalPlanPreprocessor extends BaseAlgebraVisitor<LogicalPlanner.P
       }
     }
 
-    Target [] targets;
-    targets = new Target[projectTargetExprs.length];
+    Target [] targets = buildTargets(ctx, expr.getNamedExprs());
 
-    for (int i = 0; i < expr.getNamedExprs().length; i++) {
-      NamedExpr namedExpr = expr.getNamedExprs()[i];
-      TajoDataTypes.DataType dataType = typeDeterminant.determineDataType(ctx, namedExpr.getExpr());
-
-      if (namedExpr.hasAlias()) {
-        targets[i] = new Target(new FieldEval(new Column(namedExpr.getAlias(), dataType)));
-      } else {
-        String generatedName = ctx.plan.generateUniqueColumnName(namedExpr.getExpr());
-        targets[i] = new Target(new FieldEval(new Column(generatedName, dataType)));
-      }
-    }
     stack.pop(); // <--- Pop
 
     ProjectionNode projectionNode = ctx.plan.createNode(ProjectionNode.class);
@@ -222,6 +212,22 @@ public class LogicalPlanPreprocessor extends BaseAlgebraVisitor<LogicalPlanner.P
 
     ctx.queryBlock.setSchema(projectionNode.getOutSchema());
     return projectionNode;
+  }
+
+  private Target [] buildTargets(LogicalPlanner.PlanContext context, NamedExpr [] exprs) throws PlanningException {
+    Target [] targets = new Target[exprs.length];
+    for (int i = 0; i < exprs.length; i++) {
+      NamedExpr namedExpr = exprs[i];
+      TajoDataTypes.DataType dataType = typeDeterminant.determineDataType(context, namedExpr.getExpr());
+
+      if (namedExpr.hasAlias()) {
+        targets[i] = new Target(new FieldEval(new Column(namedExpr.getAlias(), dataType)));
+      } else {
+        String generatedName = context.plan.generateUniqueColumnName(namedExpr.getExpr());
+        targets[i] = new Target(new FieldEval(new Column(generatedName, dataType)));
+      }
+    }
+    return targets;
   }
 
   @Override
